<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/exerciseList"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/exerciseList" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/baseline_star_24"
            android:title="@string/favourite_exercises" />
        <item
            android:id="@+id/statistic"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/common_google_signin_btn_icon_dark"
                android:title="@string/sign_out" />
        </menu>
    </item>


</menu>
